--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "directories": {
       "baseURL": "app"
     },
+    "dependencies": {
+      "jsonp": "npm:jsonp@^0.2.0"
+    },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.1.11",
-      "babel-runtime": "npm:babel-runtime@^5.1.11",
-      "core-js": "npm:core-js@^0.8.4"
+      "traceur": "github:jmcriffey/bower-traceur@0.0.88",
+      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.88"
     }
   }
 }
