--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
       "traceur": "github:jmcriffey/bower-traceur@0.0.88",
       "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.88"
     }
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5"
   }
 }
