--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Showcase of Wallpapers using the Reddit APIs",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start"
   },
   "author": "Daniele Zanni",
   "license": "MIT",
@@ -22,6 +22,15 @@
     }
   },
   "devDependencies": {
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "jasmine-core": "^2.3.0",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.8",
+    "karma-html-reporter": "^0.2.6",
+    "karma-jasmine": "^0.3.5",
+    "karma-jspm": "^1.1.4",
+    "karma-source-map-support": "^1.0.0",
+    "karma-traceur-preprocessor": "^0.4.0",
+    "traceur": "0.0.89"
   }
 }
