--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-jscs": "^1.8.0",
     "jasmine-core": "^2.3.0",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.8",
