--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
       "angular/bower-angular": "github:angular/bower-angular@^1.3.15",
+      "angular/bower-angular-route": "github:angular/bower-angular-route@^1.3.15",
       "angular/bower-material": "github:angular/bower-material@^0.8.3",
       "jsonp": "npm:jsonp@^0.2.0"
     },
