--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "angular/bower-angular": "github:angular/bower-angular@^1.3.15",
       "angular/bower-angular-route": "github:angular/bower-angular-route@^1.3.15",
       "angular/bower-material": "github:angular/bower-material@^0.8.3",
+      "font-awesome": "npm:font-awesome@^4.3.0",
       "jsonp": "npm:jsonp@^0.2.0"
     },
     "devDependencies": {
